# ai-meeting-notetaker

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  EMBEDDED_BOT_SETUP.md  ENV_CONFIGURATION.md  Makefile  README.md  WEBEX_EMBEDDED_APP_SETUP.md  list-meetings-api-documentation.md  start.sh  test_groq_word_timestamps.py  webex-multistream-documentation.md
infra/: docker-compose.yml  (+1 more)
services/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  migration_add_updated_at.sql  pyproject.toml  requirements.txt  schema.sql  test_jwt.py  worker.py
services/backend/alembic/: env.py
services/backend/alembic/versions/: 001_initial_migration.py
services/backend/app/: celery_app.py  main.py
services/backend/app/api/: audio.py  embedded.py  health.py  meetings.py  screenshots.py  speaker_events.py  websocket.py
services/backend/app/bot_runner/: __init__.py  manager.py
services/backend/app/core/: auth.py  bot_client.py  config.py  database.py  logger.py  queue.py
services/backend/app/models/: __init__.py  audio_chunk.py  entities.py  meeting.py  non_voting_assistant.py  screenshare_capture.py  speaker_event.py  speaker_transcript.py
services/backend/app/services/: audio_speaker_mapper.py  llm_processor.py  palantir_service.py  transcription.py  vision_service.py  webex_api.py
services/backend/app/tasks/: __init__.py  llm.py  non_voting.py  participants.py  transcription.py  vision.py
services/backend/app/workers/: embedding_worker.py  stt_worker.py  summary_worker.py
services/backend/bot-runner/: package-lock.json  package.json
(+118 files in other folders)
