[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-notetaker-backend"
version = "0.1.0"
description = "FastAPI backend for AI meeting notetaker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "rq>=2.5.0",
    "boto3>=1.34.0",
    "psycopg[binary]>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "groq>=0.30.0",
    "openai>=1.99.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
